<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setup_welcome"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/setup_vision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/set_vision"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sys_setting"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/setup_update_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/setup_update_stores"
            android:background="@drawable/press_stroke_bray"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sync_data"
            android:textColor="@drawable/btn"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/setup_update_stores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/press_stroke_bray"
            android:focusable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update_stores"
            android:textColor="@drawable/btn"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/press_stroke_bray"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.huanhong.decathlonstb.custom.MySpinner
                android:id="@+id/spinner_areas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/stroke_bray"
                android:focusable="true"
                android:padding="10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/set_region"
                android:textColor="#fff"
                android:textSize="20sp" />

            <com.huanhong.decathlonstb.custom.MySpinner
                android:id="@+id/spinner_citys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/stroke_bray"
                android:focusable="true"
                android:padding="10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/set_city"
                android:textColor="#fff"
                android:textSize="20sp" />

            <com.huanhong.decathlonstb.custom.MySpinner
                android:id="@+id/spinner_stores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:background="@drawable/stroke_bray"
                android:focusable="true"
                android:padding="10dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/set_store"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/setup_http"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/stroke_bray"
            android:padding="10dp"
            android:singleLine="true"
            android:text="http://"
            android:textColor="#fff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke_bray"
                android:padding="10dp"
                android:text="Sever Ip"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text=":"
                android:textColor="#fff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/setup_edit_ip1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_bray"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:padding="10dp"
                android:text="192"
                android:textColor="#fff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/setup_edit_ip2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/stroke_bray"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:padding="10dp"
                android:text="168"
                android:textColor="#fff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/setup_edit_ip3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/stroke_bray"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:padding="10dp"
                android:textColor="#fff"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/setup_edit_ip4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/stroke_bray"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:padding="10dp"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/stroke_bray"
            android:padding="10dp"
            android:textColor="#fff"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/setup_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/press_stroke_bray"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/setting_save"
                android:textColor="@drawable/btn"
                android:textSize="20sp" />
        </FrameLayout>


    </LinearLayout>

</LinearLayout>