<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/setup_window"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#80000000"
              android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/input_password"
            android:textColor="#fff"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/setup_window_edit"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/stroke_bray"
            android:digits="0123456789"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:background="@drawable/press_stroke_bray"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:paddingTop="25dp">

            <include
                layout="@layout/keyboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/setup_window_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/press_stroke_bray"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@drawable/btn"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/setup_window_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/press_stroke_bray"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/confim"
                android:textColor="@drawable/btn"
                android:textSize="25sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/setup_window_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/error_password"
            android:textColor="#ff0000"
            android:textSize="20sp"
            android:visibility="invisible"/>

        <!--<TextView-->
            <!--android:id="@+id/tv_test"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="20sp"/>-->
    </LinearLayout>
</LinearLayout>